<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edfd_tv_additem"
            android:textSize="50dp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SKU: "
                android:textSize="30dp"/>

            <EditText
                android:id="@+id/edfd_et_sku"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edfd_tv_foodname"
                android:textSize="30dp"/>

            <EditText
                android:id="@+id/edfd_et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edfd_tv_price"
                android:textSize="30dp"/>

            <EditText
                android:id="@+id/edfd_et_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:textSize="30dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edfd_tv_description"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/edfd_et_desc"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:textSize="30dp"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edfd_tv_imagepath"
            android:textSize="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edfd_et_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/edfd_btn_browse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edfd_btn_browse"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edfd_tv_category"
                android:textSize="30dp"/>

            <Spinner
                android:id="@+id/edfd_spnr_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp" />

        </LinearLayout>

        <Button
            android:id="@+id/edfd_btn_addfooditem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edfd_btn_addfooditem"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/edfd_btn_viewfooditem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edfd_btn_viewfooditem"
            android:textSize="30dp"/>

    </LinearLayout>

</ScrollView>
