<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="2"
    android:columnCount="2"
    tools:context="com.telemeal.ManagerOptionActivity">

    <Button
        android:id="@+id/mngr_btn_editemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/mngr_btn_editemployee"
        android:textSize="50dp"
        android:layout_margin="50dp" />

    <Button
        android:id="@+id/mngr_btn_editfd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/mngr_btn_editmenu"
        android:textSize="50dp"
        android:layout_margin="50dp" />

    <Button
        android:id="@+id/mngr_btn_invoice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/mngr_btn_invoice"
        android:textSize="50dp"
        android:layout_margin="50dp" />

    <Button
        android:id="@+id/mngr_btn_orders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:text="@string/mngr_btn_back"
        android:textSize="50dp"
        android:layout_margin="50dp" />

</GridLayout>
