<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.telemeal.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_tv_eid"
        android:textAlignment="center"
        android:textSize="50dp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/login_et_eid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textAlignment="center"
        android:inputType="numberPassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_tv_ename"
        android:textAlignment="center"
        android:textSize="50dp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/login_et_ename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/login_btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:text="@string/login_btn_enter"
        android:paddingHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

</LinearLayout>
